src/objects/Client_Investment_Objective__c.object
<CustomObject>
    <description>Object tied to Client Strategy Plans, to track Client Investment needs and goal.</description>
    <fields>
        <fullName>Client_Strategy_Plan__c</fullName>
        <label>Client Strategy Plan</label>
        <referenceTo>Strategy_Plan__c</referenceTo>
        <relationshipLabel>Investment Objectives and Insights</relationshipLabel>
        <relationshipName>Client_Investment_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Potential__c</fullName>
        <inlineHelpText>Provide details on the status of products or product discussions/searches as related to this objective</inlineHelpText>
        <label>Current/Potential</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Investment_Detail__c</fullName>
        <label>MFS Potential Strategy Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investment_Objective_Detail1__c</fullName>
        <label>Investment Objective Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Investment_Objective_Detail__c</fullName>
        <label>Investment Objective Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Objective__c</fullName>
        <label>Investment Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Capital preservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inflation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liability matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volatility Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term DC Outcome</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFS_Potential_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to track potential strategies tied to a Client Investment Objective</description>
        <label>MFS Potential Strategy</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Investment Objectives and Insights (MFS Potential Strategy)</relationshipLabel>
        <relationshipName>Investment_Objectives_and_Insights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFS_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFS Existing Strategy</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Investment Objectives and Insights</relationshipLabel>
        <relationshipName>Client_Investment_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Client_Investment_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Identification__c</fullName>
        <inlineHelpText>E.g. US DB Plan, Canadian DC Plan, etc.</inlineHelpText>
        <label>Plan Identification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <picklist>
            <picklistValues>
                <fullName>DB Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sovereign Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Investment Objective and Insight</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investment Objectives and Insights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>